--- a/projects.html
+++ b/projects.html
@@ -46,7 +46,7 @@
     <p>
       Built a scalable quizzing platform, including two frontends and a backend, for MyGov.in to increase citizen engagement with children nationwide.
     </p>
-    <p><strong>Frontend:</strong> Reactjs (HTML, Tailwind-CSS), Nestjs, PostgreSQL, Redis, Grafana, Docker, Software Architecture, DB Design </p>
+    <p><strong>Tech:</strong> ReactJS (HTML, Tailwind-CSS), NestJS, PostgreSQL, Redis, Grafana, Docker, Software Architecture, DB Design </p>
   </div>
 
   <div class="project">
@@ -62,7 +62,7 @@
     <p>
       Built a hybrid content and collaborative recommendation system to recommend apparel to customers. 
     </p>
-    <p><strong>Tech:</strong> R, Feature Engineering, Content Filtering, Collaborative Filtering, Hierarchical Clustering, Recency Modelling, SQL </p>
+    <p><strong>Tech:</strong> R, Feature Engineering, Content Filtering, Collaborative Filtering, Hierarchical Clustering, Time Weighing, SQL </p>
   </div>
 </div>
 
@@ -72,3 +72,4 @@
 
 </body>
 </html>
+
