--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
 <div class="container">
   <div class="profile">
-    <!-- Replace profile.jpg with your photo file -->
+    <h1>Welcome to My Website!</h1>
+    
     <img src="images/profile.jpg" alt="Kunal Soni">
 
     <h1>Kunal Soni</h1>
@@ -46,3 +47,4 @@
 
 </body>
 </html>
+
