--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Kunal Soni | Home</title>
+  <title>Home | Kunal Soni</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -47,4 +47,5 @@
 
 </body>
 </html>
+
 
