--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
     <img src="images/profile.jpg" alt="Kunal Soni">
 
-    <h1>Kunal Soni</h1>
+    <h1>Kunal Soni | 金士俊 </h1>
     <h2>Product Engineer | ML Engineer | Software Engineer | AI Professional</h2>
 
     <div class="social-links">
@@ -47,5 +47,6 @@
 
 </body>
 </html>
+
 
 
