--- a/about.html
+++ b/about.html
@@ -17,11 +17,11 @@
   <h1>About Me</h1>
 
   <p>
-    I am a Master of Computing student at the National University of Singapore (NUS) with over a decade of experience in building data-driven and AI-powered products across multinationals and promising startups. My background spans Amazon, GE Global Research, TATA R&D, HealthTech, EdTech, FinTech, and InsureTech, where I’ve led end-to-end development of scalable systems in forecasting, product recommendation, AI bots, analytics platforms, and full-stack software development. Currently, I am deepening and broadening my knowledge in artificial intelligence, big data systems, and web3 technologies, with a strong interest in applying AI to real-world business problems. I am seeking internship opportunities by May 2026 preferably in ICT or Finance, where I can combine my industry experience with advanced computing skills to build impactful, production-ready solutions.
+    I am a Master of Computing student at the National University of Singapore (NUS) with over a decade of experience in building data-driven and AI-powered products in multinationals and promising startups. My background spans Amazon, GE Global Research, TATA R&D, HealthTech, EdTech, FinTech, and InsureTech, where I’ve led end-to-end development of scalable information systems in forecasting, product recommendation, AI bots, analytics platforms, and full-stack software development. Currently, I am deepening and broadening my knowledge in artificial intelligence, big data systems, and web3 technologies, with a strong interest in applying AI to real-world business problems. I strive to translate knowledge into impactful, meaningful products that address real-world problems and add lasting value to society.
   </p>
 
   <p>
-    Outside of my professional pursuits, I stay active and intellectually engaged through a diverse set of interests. I enjoy playing cricket, swimming, and working out at the gym, activities that help me maintain discipline, energy, and physical well-being. I am also an avid reader with a strong interest in science fiction and finance, particularly drawn to ideas that explore the future, technology, and ethics. My favourite authors include Philip K. Dick and Isaac Asimov, whose work I deeply admire. In addition to that, I actively learn about quantitative finance and value investing, inspired by the principles advocated by Warren Buffett and Benjamin Graham. I also love to travel and meet new people, learning about their cultures, cuisines, and lived experiences—an approach that continually enriches me and shapes my perspective on life.
+    Outside of my professional pursuits, I stay active and intellectually engaged through a diverse set of interests. I enjoy playing cricket, swimming, and working out at the gym, activities that help me maintain discipline, energy, and physical well-being. I am also an avid reader with a strong interest in science fiction and finance, particularly drawn to ideas that explore the future, technology, and ethics. My favourite authors include Philip K. Dick and Isaac Asimov, whose work I deeply admire. In addition to that, I actively learn about quantitative finance and value investing, inspired by the principles advocated by Warren Buffett and Benjamin Graham. I also love to travel and meet new people, learning about their cultures, cuisines, and lived experiences—an approach that continually enriches me and shapes my perspective on life.  
   </p>
 
 <footer>
@@ -30,4 +30,5 @@
 
 </body>
 </html>
+
 
