--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
   </p>
 
   <p>
-    Outside of my professional pursuits, I stay active and intellectually engaged through a diverse set of interests. I enjoy playing cricket, swimming, and working out at the gym, activities that help me maintain discipline, energy, and physical well-being. I am also an avid reader with a strong interest in science fiction and finance, particularly drawn to ideas that explore the future, technology, and ethics. My favourite authors include Philip K. Dick and Isaac Asimov, whose work I deeply admire. In addition to that, I actively learn about quantitative finance and value investing, inspired by the principles advocated by Warren Buffett and Benjamin Graham. I also love to travel and meet new people, learning about their cultures, cuisines, and lived experiences—an approach that continually enriches me and shapes my perspective on life.  
+    Outside of my professional pursuits, I stay active and intellectually engaged through a diverse set of interests. I enjoy playing cricket, swimming, and working out at the gym, activities that help me maintain discipline, energy, and physical fitness. I am also an avid reader with a strong interest in science fiction and finance, particularly drawn to ideas that explore the future, technology, and ethics. My favourite authors include Philip K. Dick and Isaac Asimov, whose work I deeply admire. In addition to that, I learn about quantitative finance, particularly inspired by the time-tested principles of value investing advocated by Warren Buffett and Benjamin Graham. I also love to travel and meet new people, learning about their cultures, cuisines, and lived experiences—an approach that continually enriches me and shapes my perspective on life.  
   </p>
 
 <footer>
@@ -30,5 +30,6 @@
 
 </body>
 </html>
+
 
 
