--- a/about.html
+++ b/about.html
@@ -17,11 +17,11 @@
   <h1>About Me</h1>
 
   <p>
-    I am a Master of Computing student at the National University of Singapore (NUS) with over a decade of experience in building data-driven and AI-powered products in multinationals and promising startups. My background spans Amazon, GE Global Research, TATA R&D, HealthTech, EdTech, FinTech, and InsureTech, where I’ve led end-to-end development of scalable information systems in forecasting, product recommendation, AI bots, analytics platforms, and full-stack software development. Currently, I am deepening and broadening my knowledge in artificial intelligence, big data systems, and web3 technologies, with a strong interest in applying AI to real-world business problems. I strive to translate knowledge into impactful, meaningful products that address real-world problems and add lasting value to society.
+    I am a Master of Computing student at the National University of Singapore (NUS) with over a decade of experience in building data-driven and AI-powered products in multinationals and promising startups. My background spans Amazon, GE Global Research, TATA R&D, HealthTech, EdTech, FinTech, and InsureTech, where I’ve led end-to-end development of scalable information systems in forecasting, product recommendation, AI bots, analytics platforms, and full-stack software development. Currently, I am deepening and broadening my knowledge in artificial intelligence, big data systems, and web3 technologies, with a strong interest in applying AI to real-world business problems. I strive to transform knowledge into impactful and meaningful products that address real-world problems and add lasting value to society.
   </p>
 
   <p>
-    Outside of my professional pursuits, I stay active and intellectually engaged through a diverse set of interests. I enjoy playing cricket, swimming, and working out at the gym, activities that help me maintain discipline, energy, and physical fitness. I am also an avid reader with a strong interest in science fiction and finance, particularly drawn to ideas that explore the future, technology, and ethics. My favourite authors include Philip K. Dick and Isaac Asimov, whose work I deeply admire. In addition to that, I learn about quantitative finance, particularly inspired by the time-tested principles of value investing advocated by Warren Buffett and Benjamin Graham. I also love to travel and meet new people, learning about their cultures, cuisines, and lived experiences—an approach that continually enriches me and shapes my perspective on life.  
+    Outside of my professional pursuits, I stay active and intellectually engaged through a diverse set of interests. I enjoy playing cricket, swimming, and working out at the gym, activities that help me maintain discipline, energy, and physical fitness. I am also an avid reader with a strong interest in science fiction and finance. I am particularly drawn to ideas that explore the future, technology, and ethics. My favourite authors include Philip K. Dick and Isaac Asimov, whose work I deeply admire. I also have a keen interest in quantitative finance, particularly inspired by the time-tested principles of value investing advocated by Warren Buffett and Benjamin Graham. Additionally, I love to travel and meet new people, learning about their cultures, cuisines, and lived experiences—an approach that continually enriches me and shapes my perspective on life. 
   </p>
 
 <footer>
@@ -30,6 +30,7 @@
 
 </body>
 </html>
+
 
 
 
