--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
   </p>
 
   <p>
-    Outside of my professional pursuits, I stay active and intellectually engaged through a diverse set of interests. I enjoy playing cricket, swimming, and working out at the gym, activities that help me maintain discipline and fitness and keep me in shape. I am also an avid reader with a strong interest in science fiction and finance. I am particularly drawn to ideas that explore the future, technology, and ethics. Philip K. Dick and Isaac Asimov are two authors whom I admire. I also have a keen interest in quantitative finance, particularly inspired by the time-tested principles of value investing advocated by Warren Buffett and Benjamin Graham. Additionally, I love to travel and meet new people, learning about their cultures, cuisines, and lived experiences — an approach that continually enriches me and shapes my perspective on life. 
+    Outside of my professional pursuits, I stay active and intellectually engaged through a diverse set of interests. I enjoy playing cricket, swimming, and working out at the gym, activities that help me maintain discipline and fitness and keep me in shape. I am also an avid reader with a strong interest in science fiction and finance. I am particulary drawn to ideas that explore the future, technology, and ethics. Philip K. Dick and Isaac Asimov are two authors whom I admire. I also have a keen interest in quantitative finance, especially inspired by the time-tested principles of value investing advocated by Warren Buffett and Benjamin Graham. Additionally, I love to travel and meet new people, learning about their cultures, cuisines, and lived experiences — an approach that continually enriches me and shapes my perspective on life. 
   </p>
 
 <footer>
@@ -30,6 +30,7 @@
 
 </body>
 </html>
+
 
 
 
