-added quizzing website project to projects.html

--- a/projects.html
+++ b/projects.html
@@ -77,8 +77,45 @@
               Express.js, Python, MongoDB
             </p>
             <p>
-              <strong>Management:</strong> Scrum, project management, vendor
-              management
+              <strong>Management:</strong> project management, vendor
+              management, software requirements specifications
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="project">
+        <!-- Title at top center -->
+        <div class="project-header-title">
+          <h2>Children's Quizzing Website For Government of India</h2>
+        </div>
+
+        <!-- Left and Right cards -->
+        <div class="project-content">
+          <!-- Left card: image + year -->
+          <div class="project-left-card">
+            <img
+              src="images/projects/children-quiz-2024.png"
+              alt="Children's quizzing website ilustration"
+            />
+            <span class="year">2024</span>
+          </div>
+
+          <!-- Right card: description -->
+          <div class="project-right-card">
+            <p>
+              Designed, developed, and managed two frontends and a backend for a
+              children's quizzing website for MyGov.in, aimed at improving
+              government's digital engagement with children.
+            </p>
+            <p>
+              <strong>Tech:</strong> ReactJs, NestJS, PostgreSQL, Redis, Docker,
+              Grafana, Microsoft Azure, software architecture, database design,
+              software requirements specifications
+            </p>
+            <p>
+              <strong>Management:</strong> Scrum, JIRA, project management,
+              client meetings
             </p>
           </div>
         </div>
@@ -108,10 +145,13 @@
               renewals for an insurance aggregator, enabling seamless policy
               renewals, validations, and integrations with external partners.
             </p>
-            <p><strong>Tech:</strong> NestJS, PostgreSQL, MongoDB</p>
             <p>
-              <strong>Management:</strong> Scrum, project management, client
-              meetings
+              <strong>Tech:</strong> NestJS, PostgreSQL, MongoDB, Amazon Web
+              Services
+            </p>
+            <p>
+              <strong>Management:</strong> Scrum, JIRA, project management,
+              client meetings
             </p>
           </div>
         </div>
@@ -145,7 +185,7 @@
             </p>
             <p>
               <strong>Tech:</strong> Python, Vehicle Routing (TSP), Dijkstra’s
-              Algorithm, Heuristic Optimization
+              Algorithm, Heuristic
             </p>
           </div>
         </div>
@@ -209,8 +249,8 @@
               maintenance and reducing unplanned downtime.
             </p>
             <p>
-              <strong>Tech:</strong> Python, Machine Learning, Data Engineering,
-              Feature Engineering
+              <strong>Tech:</strong> Python, Machine Learning, Deep Learning,
+              Data Engineering, Feature Engineering
             </p>
           </div>
         </div>
