-minor modifications to content

--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,9 @@
             <p>
               Fine-tuned BERT with span-labelling head to build an extractive
               question answering system that extracts answers as a contiguous
-              span of text from a passage.
+              span of text from a passage. A few of its applications are
+              customer support, knowledge management, legal and financial
+              information extraction, and public information system.
             </p>
             <p><strong>Tech:</strong> Python, Fine-tuning, Transfer Learning</p>
             <p>
@@ -105,17 +107,16 @@
           <div class="project-right-card">
             <p>
               Designed, developed, and managed two frontends and a backend for a
-              children's quizzing website for MyGov.in, aimed at improving
+              children's quizzing website for MyGov.in, aimed at improving the
               government's digital engagement with children.
             </p>
             <p>
               <strong>Tech:</strong> ReactJs, NestJS, PostgreSQL, Redis, Docker,
-              Grafana, Microsoft Azure, software architecture, database design,
-              software requirements specifications
+              Grafana, Microsoft Azure, software architecture, database design
             </p>
             <p>
               <strong>Management:</strong> Scrum, JIRA, project management,
-              client meetings
+              client meetings, software requirements specifications
             </p>
           </div>
         </div>
@@ -179,9 +180,8 @@
             <p>
               Developed an automated scheduling system that computes optimal
               travel routes and heuristically allocates hospital operating
-              theatre slots, ensuring zero overlap in surgeries for surgeons
-              traveling across multiple hospitals within a city over a given
-              time horizon.
+              theatre slots, ensuring no clashes in surgeries for surgeons
+              traveling across multiple hospitals within a city in a day.
             </p>
             <p>
               <strong>Tech:</strong> Python, Vehicle Routing (TSP), Dijkstra’s
@@ -211,9 +211,10 @@
           <!-- Right card: description -->
           <div class="project-right-card">
             <p>
-              Built a hybrid recommendation system combining content-based and
-              collaborative filtering techniques to deliver personalized apparel
-              recommendations, improving relevance and customer engagement.
+              Built a hybrid recommendation system combining content-filtering
+              and collaborative-filtering techniques to deliver personalized
+              apparel recommendations, improving relevance, customer engagement,
+              and sales.
             </p>
             <p>
               <strong>Tech:</strong> R, Feature Engineering, Content Filtering,
