-modifications to the RAG project

--- a/projects.html
+++ b/projects.html
@@ -71,8 +71,10 @@
           <div class="project-right-card">
             <p>
               Developed a Generative AI–powered mobile application to train
-              nurses for Occupational English Test (OET) preparation using
-              personalized, interactive learning experiences.
+              nurses for Occupational English Test (OET) preparation. A
+              RAG-based chat engine to help nurses prepare for the test by
+              comparing their responses to AI-based responses, improving
+              self-assessment and training efficiency.
             </p>
             <p>
               <strong>Tech:</strong> LlamaIndex, RAG, VectorDB, React Native,
