-added "and" to tagline

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
 
     <p style="max-width: 600px; margin-top: 25px;">
-      Driven to build scalable, automated, human-centric products at scale
+      Driven to build scalable, automated, and human-centric products at scale
     </p>
 
     <div class="cta">
@@ -47,6 +47,7 @@
 
 </body>
 </html>
+
 
 
 
