-rectified some grammatical errors.

--- a/projects.html
+++ b/projects.html
@@ -71,9 +71,9 @@
           <div class="project-right-card">
             <p>
               Developed a Generative AI–powered mobile application to train
-              nurses for Occupational English Test (OET) preparation. A
-              RAG-based chat engine to help nurses prepare for the test by
-              comparing their responses to AI-based responses, improving
+              nurses for Occupational English Test (OET) preparation. It
+              consisted of a RAG-based chatbot to help nurses prepare for the
+              test by comparing their responses to AI-based responses, improving
               self-assessment and training efficiency.
             </p>
             <p>
@@ -263,3 +263,4 @@
     <footer>© 2025 Kunal Soni</footer>
   </body>
 </html>
+
