-added tech skills to recommender project

--- a/projects.html
+++ b/projects.html
@@ -220,8 +220,8 @@
             </p>
             <p>
               <strong>Tech:</strong> R, Feature Engineering, Content Filtering,
-              Collaborative Filtering, Hierarchical Clustering, Time Weighting,
-              SQL
+              Collaborative Filtering, Hierarchical Clustering, CART, Random
+              Forest, Time Weighting, SQL
             </p>
           </div>
         </div>
@@ -263,4 +263,5 @@
     <footer>© 2025 Kunal Soni</footer>
   </body>
 </html>
+
 
