-added response design

--- a/index.html
+++ b/index.html
@@ -1,53 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Home | Kunal Soni</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Home | Kunal Soni</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <nav>
+      <input type="checkbox" id="menu-toggle" />
 
-<nav>
-  <a href="index.html" class="active">Home</a>
-  <a href="about.html">About</a>
-  <a href="projects.html">Projects</a>
-</nav>
+      <label for="menu-toggle" class="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </label>
 
-<div class="container">
-  <div class="profile">
-    <h1>Welcome to My Website!</h1>
-    
-    <img src="images/profile.jpg" alt="Kunal Soni">
+      <div class="nav-links">
+        <a href="index.html" class="active">Home</a>
+        <a href="about.html">About</a>
+        <a href="projects.html">Projects</a>
+      </div>
+    </nav>
 
-    <h1>Kunal Soni | 金士俊 </h1>
-    <h2>Product Engineer | ML Engineer | Software Engineer | AI Professional</h2>
+    <div class="container">
+      <h1>Welcome to My Website!</h1>
+      <div class="profile">
+        <img src="images/profile.jpg" alt="Kunal Soni" />
 
-    <div class="social-links">
-      <!-- Replace # with your actual profile URLs -->
-      <a href="https://www.linkedin.com/in/sonikunal7" target="_blank">LinkedIn</a>
-      <a href="https://github.com/kunalpop" target="_blank">GitHub</a>
-      <a href="https://x.com/kunalpop" target="_blank">X</a>
-      <a href="https://www.facebook.com/your-facebook" target="_blank">Facebook</a>
+        <h1>Kunal Soni | 金士俊</h1>
+        <h2>
+          Product Engineer | ML Engineer | Software Engineer | AI Professional
+        </h2>
+
+        <div class="social-links">
+          <!-- Replace # with your actual profile URLs -->
+          <a href="https://www.linkedin.com/in/sonikunal7" target="_blank"
+            >LinkedIn</a
+          >
+          <a href="https://github.com/kunalpop" target="_blank">GitHub</a>
+          <a href="https://x.com/kunalpop" target="_blank">X</a>
+          <a href="https://www.facebook.com/your-facebook" target="_blank"
+            >Facebook</a
+          >
+        </div>
+
+        <p class="tagline">
+          Driven to build scalable, automated, and human-centric products at
+          scale.
+        </p>
+
+        <div class="cta">
+          <a href="about.html">About Me</a>
+          <a href="projects.html">Projects</a>
+        </div>
+
+        <div class="quote">
+          <p class="original">ਸਚਹੁ ਓਰੈ ਸਭੁ ਕੋ ਉਪਰਿ ਸਚੁ ਆਚਾਰੁ ॥</p>
+          <p class="translation">
+            Truth is higher than everything; but higher still is truthful
+            living.
+          </p>
+        </div>
+      </div>
     </div>
 
-    <p style="max-width: 600px; margin-top: 25px;">
-      Driven to build scalable, automated, and human-centric products at scale
-    </p>
+    <
 
-    <div class="cta">
-      <a href="about.html">About Me</a>
-      <a href="projects.html">Projects</a>
-    </div>
-  </div>
-</div>
-
-<footer>
-  © 2025 Kunal Soni
-</footer>
-
-</body>
+    <footer>© 2025 Kunal Soni</footer>
+  </body>
 </html>
-
-
-
-
